# cfdsim

./: Cargo.toml  README.md
batch/: Cargo.toml  README.md
batch/src/: main.rs
src/: checklist.rs  coordinate_systems.rs  expectation.rs  lib.rs  main.rs  play_macro.rs  test_properties.rs  wind_speed.rs
