[package]
name = "cfdsim"
version = "0.1.0"
edition = "2021"
description = "CLI for GMT CFD STARCCM+ sim file"

[workspace]
members = ["batch"]

[workspace.dependencies]
anyhow = "1.0.94"

[dependencies]
anyhow.workspace = true
clap = { version = "4.5.23", features = ["derive"] }
quick-xml = "0.37.1"
thiserror = "2.0.6"
